--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,8 +4,8 @@ spring.security.user.password = vishal
 
 # Database connection
 spring.datasource.url=jdbc:oracle:thin:@//localhost:1521/orcl
-spring.datasource.username=c##vishal
-spring.datasource.password=vishal
+spring.datasource.username=
+spring.datasource.password=
 
 # Keep the connection alive if idle for a long time (needed in production)
 spring.datasource.testWhileIdle=true
