--- a/pom.xml
+++ b/pom.xml
@@ -74,6 +74,13 @@
 		  <artifactId>spring-boot-starter-thymeleaf</artifactId>
 		</dependency>
 		
+		<!-- Thymeleaf Spring Security -->
+		<dependency>
+	    <groupId>org.thymeleaf.extras</groupId>
+	    <artifactId>thymeleaf-extras-springsecurity4</artifactId>
+		</dependency>
+				
+		
 		<!-- Bootstrap -->
 		<dependency>
 	    <groupId>org.webjars</groupId>
